--- a/9000/Dockerfile
+++ b/9000/Dockerfile
@@ -1,5 +1,6 @@
 FROM java:8
-ENV JRUBY_VERSION cab2272ea076d2898721023c851cf895379946f2
+#ENV JRUBY_VERSION cab2272ea076d2898721023c851cf895379946f2
+ENV JRUBY_VERSION ea47cab70b37f01f7f7e1bc0815367cac3449f86
 RUN apt-get update && apt-get install -y --no-install-recommends maven git-core \
   && git clone https://github.com/jruby/jruby.git /opt/jruby-src \
   && cd /opt/jruby-src \
